--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
-    name: pentaworlds-api
-    env: python
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port 10000
+    name: fastapi-backend
+    env: docker
     plan: free
-    envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: pentaworlds-db
-          property: connectionString
+    autoDeploy: true
+    region: frankfurt
+    branch: main
+    dockerfilePath: backend/Dockerfile
+    buildCommand: ""
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 8000
+    rootDir: backend
