--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi
 uvicorn
 sqlalchemy
 psycopg2-binary
-bcrypt==3.2.0
+passlib[bcrypt]
 python-jose[cryptography]
 python-dotenv
 python-multipart
