--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://penta_worlds_database_user:tlrQsqkboG4qHcixoBAIAOQlzYtLpMfx@dpg-d0v0gammcj7s73cqrnm0-a/penta_worlds_database
+DATABASE_URL=postgresql://penta_worlds_database_user:tlrQsqkboG4qHcixoBAIAOQlzYtLpMfx@dpg-d0v0gammcj7s73cqrnm0-a.oregon-postgres.render.com/penta_worlds_database
